# Direct-Announcer-Bot

./: .gitignore  .pre-commit-config.yaml  LICENCE.md  README.md  launcher.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yaml
.github/workflows/: deploy.yml
config/: config_data.example.py
src/: bot.py  core.py  database.py  events.py  util.py
src/scraping/: nintendo_direct.py  pokemon_presents.py  scraper_exceptions.py
